# markov

./: .env.example  .gitignore  README.md  package-lock.json  requirements.txt
api/: main.py
demo/: seed.py
sdk/: pyproject.toml
sdk/markov/: __init__.py  client.py  detector.py  storage.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.jsx
